# python-uniq-ch

./: .copier-answers.yml  .gitignore  Cargo.toml  README.md  build.py  noxfile.py  pyproject.toml
.github/workflows/: continuous-integration.yml
docs/: conf.py  index.rst
python/uniq_ch/: __init__.py
src/: lib.rs
src/uniq_ch/: __init__.py
src/uniq_ch_rust/: Cargo.toml
src/uniq_ch_rust/src/: lib.rs
tests/: test_bench.py  test_uniq_ch.py
