[package]
name = "uniq-ch"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "_uniq_ch"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
highway = "1.2.0"
pyo3 = "0.22.2"
uniq-ch = { git = "https://github.com/vivienm/rust-uniq-ch.git", version = "0.1.0", features = ["serde"] }
